unpackaged/main/default/objects/loan__ACH_Parameters__c/loan__ACH_Parameters__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>ACH Parameters</label>
</CustomObject>