unpackaged/main/default/objects/loan__ACH_Parameters__c/fields/CORPayment_Folder_Name__c.field-meta.xml
<CustomField>
    <fullName>CORPayment_Folder_Name__c</fullName>
    <label>CORPayment Folder Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>