unpackaged/main/default/objects/loan__ACH_Parameters__c/fields/loan__ACH_Id__c.field-meta.xml
<CustomField>
    <fullName>loan__ACH_Id__c</fullName>
    <defaultValue>""</defaultValue>
    <inlineHelpText>This is used to describe the input file for internal accounting purposes</inlineHelpText>
    <label>ACH Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>