unpackaged/main/default/objects/loan__ACH_Parameters__c/fields/loan__ACH_Return_Filegen__c.field-meta.xml
<CustomField>
    <fullName>loan__ACH_Return_Filegen__c</fullName>
    <inlineHelpText>This class will be instantiated at runtime to parse the ACH returns.</inlineHelpText>
    <label>ACH Return Filegen</label>
    <length>255</length>
    <type>Text</type>
</CustomField>