unpackaged/main/default/objects/loan__ACH_Parameters__c/fields/loan__Days_In_Advance_To_Create_File__c.field-meta.xml
<CustomField>
    <fullName>loan__Days_In_Advance_To_Create_File__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>This value is used to determine the number of business days prior to a payment's due date for inclusion in an ACH file. This is applicable to all transactions.</inlineHelpText>
    <label>Days In Advance To Create File</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>