unpackaged/main/default/objects/loan__ACH_Parameters__c/fields/loan__Fed_Tax_Id__c.field-meta.xml
<CustomField>
    <fullName>loan__Fed_Tax_Id__c</fullName>
    <defaultValue>""</defaultValue>
    <inlineHelpText>This is a 9 digit number used to identify all the business entities in the US for tax purposes.</inlineHelpText>
    <label>Fed Tax Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>