unpackaged/main/default/objects/loan__ACH_Parameters__c/fields/loan__Folder_Name__c.field-meta.xml
<CustomField>
    <fullName>loan__Folder_Name__c</fullName>
    <inlineHelpText>The generated ACH file is dropped in this folder. If this field is null, the ACH file is dropped in the current user's personal files.</inlineHelpText>
    <label>Folder Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>