unpackaged/main/default/objects/loan__ACH_Parameters__c/fields/loan__Immediate_Destination__c.field-meta.xml
<CustomField>
    <fullName>loan__Immediate_Destination__c</fullName>
    <label>Immediate Destination</label>
    <length>9</length>
    <type>Text</type>
</CustomField>