unpackaged/main/default/objects/loan__ACH_Parameters__c/fields/loan__Lock_Period_for_Investor_Funds__c.field-meta.xml
<CustomField>
    <fullName>loan__Lock_Period_for_Investor_Funds__c</fullName>
    <inlineHelpText>The investor fund transactions are cleared only after the lock period number of business days have passed since creation. Till then the funds remain in an uncleared state.</inlineHelpText>
    <label>Lock Period for Investor Funds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>