unpackaged/main/default/objects/loan__ACH_Parameters__c/fields/loan__Multiple_Payment_Method_Support__c.field-meta.xml
<CustomField>
    <fullName>loan__Multiple_Payment_Method_Support__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Multiple Payment Method Support</label>
    <type>Checkbox</type>
</CustomField>