unpackaged/main/default/objects/loan__ACH_Parameters__c/fields/loan__Organization_Name__c.field-meta.xml
<CustomField>
    <fullName>loan__Organization_Name__c</fullName>
    <defaultValue>""</defaultValue>
    <inlineHelpText>This is the organization name of the customer</inlineHelpText>
    <label>Organization Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>