unpackaged/main/default/objects/loan__ACH_Parameters__c/fields/loan__Originating_DFI_Identification__c.field-meta.xml
<CustomField>
    <fullName>loan__Originating_DFI_Identification__c</fullName>
    <label>Originating DFI Identification</label>
    <length>9</length>
    <type>Text</type>
</CustomField>