unpackaged/main/default/objects/loan__ACH_Parameters__c/fields/loan__Query_For_Loan_Payment_Clearing__c.field-meta.xml
<CustomField>
    <fullName>loan__Query_For_Loan_Payment_Clearing__c</fullName>
    <inlineHelpText>This class must implement IQueryBuilder. It will be used to get the query for clearing loan payments.</inlineHelpText>
    <label>Query For Loan Payment Clearing</label>
    <length>100</length>
    <type>Text</type>
</CustomField>