unpackaged/main/default/objects/loan__ACH_Parameters__c/fields/loan__Trace_Number_Prefix__c.field-meta.xml
<CustomField>
    <fullName>loan__Trace_Number_Prefix__c</fullName>
    <label>Trace Number Prefix</label>
    <length>8</length>
    <type>Text</type>
</CustomField>