unpackaged/main/default/objects/loan__ACH_Parameters__c/fields/loan__Use_Lock_Based_ACH__c.field-meta.xml
<CustomField>
    <fullName>loan__Use_Lock_Based_ACH__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If this option is selected, loan payments are created automatically in an uncleared status. Based on the lock period, uncleared transactions are auto cleared by the system.</inlineHelpText>
    <label>Use Lock Based ACH</label>
    <type>Checkbox</type>
</CustomField>