unpackaged/main/default/objects/loan__ACH_Parameters__c/fields/PPDAdvance_Folder_Name__c.field-meta.xml
<CustomField>
    <fullName>PPDAdvance_Folder_Name__c</fullName>
    <label>PPDAdvance Folder Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>